# StingrayExplorer

./: .gitattributes  .gitignore  .readthedocs.yaml  AboutUs.md  CODE_OF_CONDUCT.md  ContactUs.md  Dockerfile  LICENSE  PrivacyPolicy.md  README.md  Support.md  TermsOfService.md  electron.vite.config.ts  environment.yml  explorer.py  index.html  main.py  package-lock.json  package.json  pixi.toml  pyproject.toml  setup.py  test_astropy_roundtrip.py  tsconfig.json  tsconfig.node.json
.github/workflows/: main.yml
assets/icons/: svg.py
assets/stylesheets/: explorer.css
docs/: requirements.txt
docs/source/: DataLoading.rst  Home.rst  QuickLook.rst  conf.py  index.rst
electron/: ipcHandlers.ts  main.ts  menu.ts  preload.ts  pythonManager.ts
files/data/: LightCurve_bexvar.fits  bexvar_results_band_0.npy  data_small.hdf5  data_smaller.hdf5  lcurveA.fits  lcurve_new.fits  monol_testA.evt  monol_testA_calib.evt  test.rmf  (+2 more)
logs/: .gitignore
python-backend/: main.py  requirements.txt
scripts/: build.sh  dev.sh  package.sh  setup-python.sh  start-backend.sh
services/: __init__.py  base_service.py  data_service.py  export_service.py  lightcurve_service.py  spectrum_service.py  timing_service.py
src/: App.tsx  index.css  main.tsx
tests/: test_lazy_loader.py  test_lazy_loading_integration.py  test_performance_monitoring.py  test_reactive_updates.py  test_state_manager.py
utils/: DashboardClasses.py  app_context.py  dashboardClasses.py  error_handler.py  error_recovery.py  globals.py  lazy_loader.py  performance_monitor.py  sidebar.py  state_manager.py  strings.py
(+82 files in other folders)
