[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StingrayExplorer"
version = "0.1"
description = "A package for analyzing astronomical data."
authors = [{name = "Kartik Mandar", email = "your.email@example.com"}]
dependencies = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "stingray",
    # Add other dependencies here if needed
]
[tool.pytest.ini_options]
pythonpath = ["."]
